@@ -13,6 +13,7 @@ Henrik Petander <henrik -dot- petander -at- iki -dot- fi>
 Luigi Paioro <luigi -at- lambrate -dot- it>
 Roberto Francisco Arroyo Moreno <robfram -at- ugr -dot- es>
 Steve Crane <Steve -dot Crane -at- rococosoft -dot- com>
+Philippe Marschall <philippe -dot- marschall -at- gmail -dot- com>
 
 The included Viewer application was written by:
 
